Enable to scroll results if needed on small landscapes, stop hiding semaphore and braille buttons on Safari browsers

--- a/styles/common/layout.module.scss
+++ b/styles/common/layout.module.scss
@@ -42,6 +42,7 @@
   display: flex;
   gap: 2vmin;
   flex-direction: column-reverse;
+  overflow: auto;
 
   @include media('landscape_mode') {
     flex-direction: row-reverse;
